nys-109: correct password reset route id; prevent header flicker for privilaged users

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -1180,6 +1180,6 @@ a:hover.c-header--btn.c-header--btn__taking_action {
 }
 
 // Ensure header remains center-aligned when admin toolbar is present.
-.toolbar-horizontal header {
+.toolbar-horizontal header.fixed {
   padding-left: var(--gin-toolbar-x-offset, 256px);
 }
